--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="shortcut icon" href="/Logo.png" type="image/x-icon">
-    <title>Carlisle</title>
+    <title>Carlisle-Sloutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
@@ -16,7 +16,7 @@
     <div class="flex items-center justify-end flex-wrap lg: w-full   px-5  gap-5 mt-2">
         <div>
             <ul class="flex items-center max-sm:hidden gap-6">
-                <li> <a href="">Contact</a></li>
+                
                 <div class="border"></div>
                 <li><a href=>Jobs & Careers</a></li>
                 <div class="border"></div>
