--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="flex items-center justify-end flex-wrap lg: w-full   px-5  gap-5 mt-2">
         <div>
             <ul class="flex items-center max-sm:hidden gap-6">
-                
+                <li> <a href="">Contact</a></li>
                 <div class="border"></div>
                 <li><a href=>Jobs & Careers</a></li>
                 <div class="border"></div>
