your new message

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="border bg-[#FFFFFF] max-sm:hidden  max-sm:m-auto max-sm:pt-2 w-24 hover: h-12 ">
             <div class="flex items-center gap-1 px-1   max-sm:pt-1    pt-3 w-full">
                 <img src="/images/Group (1).png" alt="">
-                <select class="bg-white  text-black px-1">
+                <select class="bg-white  text-black ">
                     <option value="0">EN</option>
                     <option value="1">Audi</option>
                     <option value="2">BMW</option>
