--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="flex items-center justify-end flex-wrap lg: w-full   px-5  gap-5 mt-2">
-        <div>
+        <div class="">
             <ul class="flex items-center max-sm:hidden gap-6">
                 <li> <a href="">Contact</a></li>
                 <div class="border"></div>
@@ -314,7 +314,7 @@
         <h1 class="font-bold text-center text-5xl md:text-5xl text-[24px]">News & Blog</h1>
     </div>
     <div class="bg-blue-50 relative mt-10    py-5">
-        <div class= "bg-white relative max-sm:hidden  max-w-7xl  m-auto h-lg w-full  px-10 py-6  ">
+        <div class= "bg-white relative max-sm:hidden  max-w-7xl  m-auto h-lg w-full    ">
             <div class="md:flex items-center justify-center sm:hidden hidden gap-8">
                 <div>
                     <img class="img" src="/images/Image (1).png" alt="">
@@ -336,7 +336,7 @@
             </div>
         </div>
 
-        <div class="flex justify-center px-5 flex-wrap gap-10 ">
+        <div class="flex justify-center px-5 flex-wrap gap-16 ">
             <div>
                 <div class="w-96  xl:bg-white max-sm:px-7 sm:mt mt-0  relative max-full xl:mt-4">
                     <img class="hover:-translate-y-1 hover:scale-110 overflow-hidden transition duration-1000 ease-in-out"  src="/images/Img.png" alt="">
