--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="flex items-center justify-end flex-wrap lg: w-full   px-5  gap-5 mt-2">
-        <div class="">
+        <div>
             <ul class="flex items-center max-sm:hidden gap-6">
                 <li> <a href="">Contact</a></li>
                 <div class="border"></div>
@@ -313,12 +313,12 @@
     <div>
         <h1 class="font-bold text-center text-5xl md:text-5xl text-[24px]">News & Blog</h1>
     </div>
-    <div class="bg-blue-50 relative mt-10    py-5">
+    <div class="bg-blue-50 relative  mt-10    py-2">
         <div class= "bg-white relative max-sm:hidden  max-w-7xl  m-auto h-lg w-full    ">
             <div class="md:flex items-center justify-center sm:hidden hidden gap-8">
                 <div>
                     <img class="img" src="/images/Image (1).png" alt="">
-                    <div class=" w-16 h-16 bg-white   absolute left-14  bottom-72 mb-3   max-full ">
+                    <div class=" w-16 h-16 bg-white   absolute left-4  bottom-72 mb-5   max-full ">
                         <p class=" pl-3 py-2 px-5 text-[#003591] max-sm:hidden font-black">12 Mar</p>
                     </div>
                 </div>
