--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
     <div
         class="border-2 border-gray-100 relative  bottom-36 m-auto max-sm:m-3  max-w-7xl max-sm:max-h-full   h-2/4 bg-white mt-16">
-        <div class="flex gap-10 px-5 pt-14 w-full  max-sm:flex-col ">
+        <div class="flex gap-10 px-5 xl:pt-14 w-full sm:pt pt-4  max-sm:flex-col ">
             <div>
                 <div class="container">
                     <p class="clip">EPDM solutions for flat roofs, façades and buildings</p>
@@ -190,7 +190,7 @@
     </div>
     </di>
     </div>
-    <div class=" flex   justify-end xl:mt-20   sm:flex flex-wrap sm:gap gap-10 sm:mt mt-5  w-full">
+    <div class=" flex   justify-end xl:mt-20 xl:px-14   sm:flex flex-wrap sm:gap gap-10 sm:mt mt-5  w-full">
         <div class="px-6 ">
             <h1 class="font-bold sm:text-5xl text-[24px]  w-full max-w-xl mt-10     ">A complete waterproofing solution for your
                 entire building
@@ -359,7 +359,7 @@
 
 
             <div>
-                <div class=" w-96 bg-white max-md:hidden   relative  mt-4">
+                <div class=" w-96 bg-white sm:block hidden  relative  mt-4">
                     <img class="hover:-translate-y-1 hover:scale-110 overflow-hidden transition duration-1000 ease-in-out " src="/images/Img (1).png" alt="">
                     <div class=" w-16 h-14 bg-white absolute bottom-96 mb-4 left-3  max-full ">
                         <p class=" w-4 px-5  text-[#003591] mt-1 font-black">10 FEB</p>
