--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
     </div>
     <div class="digidal">
-        <div class="flex items-center justify-around w-full   sm:flex flex-wrap     px-6 py-5">
+        <div class="flex items-center justify-around w-full   sm:flex flex-col      px-6 py-5">
             <div>
                 <p class="text-white max-sm:text-lg  text-3xl max-sm:py-0 max-sm:px-0  font-bold py-10 px-5 w-full">We will be on the
                     Digital Bau - <span class=" font-thin xl-text-4xl sm:text  text-lg  "> Hall 1.2 - on 31.05.2022</span>
